[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "discordrp-mpris"
version = "0.4.0"
description = "Discord Rich Presence based on mpris2 media players"
authors = ["FichteFoll <fichtefoll2@googlemail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/FichteFoll/discordrp-mpris"
keywords = ["discord", "discord rich presence", "mpris2", "media", "dbus", "mpd", "mpv", "vlc"]
classifiers = [
    # See https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 4 - Beta',
    'Environment :: No Input/Output (Daemon)',
    'Intended Audience :: End Users/Desktop',
    'Operating System :: Unix',
    'Topic :: Communications :: Chat',
    'Topic :: Communications :: Chat :: Discord',  # not in the list above
]

packages = [
    { include = "discordrp_mpris" },
    { include = "discord_rpc" },
    { include = "ampris2" },
]
# TODO figure out if discordrp_mpris/config/config.toml is already included
# https://python-poetry.org/docs/pyproject/#include-and-exclude
# TODO exclude systemd unit if necessary

[tool.poetry.dependencies]
python = "^3.8"
dbussy = "^1.3"
tomli = { version = "^2", python = "<3.11" }

[tool.poetry.scripts]
discordrp-mpris = 'discordrp_mpris.__main__:main'
